--- a/style.css
+++ b/style.css
@@ -6,6 +6,21 @@
     margin: 0px;
     background-color: #e7f1ff;
     font-family: 'Montserrat', sans-serif;
+    background-image: url("/assets/images/Wordpress-Transparent-bg.svg");
+    background-repeat: no-repeat;
+    background-position: right top;
+    background-size: 35rem;
+  }
+
+  button {
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+  button:hover {
+    transform: scale(1.07);
   }
 
   /* navbar starts */
@@ -37,17 +52,9 @@
       text-transform: uppercase;
       width: 180px;
       height: 43px;
-      border-radius: 5px;
-      font-weight: 600;
       font-size: 14px;
       line-height: 20px;
       border: 2px solid #3789FF;
-      cursor: pointer;
-      transition: 0.3s;
-  }
-
-  nav .buttons > button:hover {
-    transform: scale(1.07);
   }
 
   nav .buttons > button:nth-child(1) {
@@ -69,6 +76,308 @@
 
 /* navbar ends */
 
+/* header starts */
+
+  header {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      padding: 1.5rem 2rem 6.5rem 7rem;
+  }
+
+  header > .left {
+      padding-top: 5rem;
+  }
+
+  header > .left > h1 {
+    font-weight: 700;
+    font-size: 65px;
+    line-height: 80px;
+    color: #272D4E;
+  }
+
+  header > .left > p {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 25px;
+    color: #94A2B3;
+  }
+
+  header > .left > button {
+    text-transform: uppercase;
+    font-size: 18px;
+    line-height: 22px;
+    color: #FFFFFF;
+    width: 267px;
+    height: 72px;
+    background: #3789FF;
+    border: 1px solid #3789FF;
+  }
+
+  header > .right {
+    background-image: url("/assets/images/header-bg1.svg"),
+                    url("/assets/images/header-bg2.svg"),
+                    url("/assets/images/header-bg3.svg");
+    background-repeat: no-repeat, no-repeat, no-repeat;
+    background-position: left 0 top 90px,
+                     right 200px top 0,
+                     right 80px top 170px;
+    background-size: 26rem, 13rem, 13rem;
+    position: relative;
+    /* display: grid;
+    place-content: center; */
+  }
+
+  header > .right > img {
+    border-radius: 1rem;
+    object-fit: contain;
+    height: 25rem;
+    /* width: 20rem; */
+    position: absolute;
+    left: 150px;
+    top: 60px;
+}
+
+  header > .right > .card {
+    width: 280px;
+    height: 350px;
+    background: #FFFFFF;
+    border: 0.998348px solid #E5EFFF;
+    border-radius: 20px;
+    position: absolute;
+    right: -15px;
+    bottom: -100px;
+    padding: 1rem;
+  }
+
+  header > .right > .card > span {
+    font-weight: 500;
+    font-size: 11.9802px;
+    line-height: 15px;
+    color: #868686;
+  }
+  /* .name { */
+      /* display: flex; */
+  /* } */
+  /* header > .right > .card > span:nth-child(1) { */
+      /* margin-top: -10px; */
+  /* } */
+
+  header > .right > .card > h2 {
+    font-weight: 500;
+    font-size: 19.9504px;
+    line-height: 37px;
+    color: #222222;
+    display: flex;
+  }
+
+  .blue {
+    width: 100%;
+    height: 45px;
+    background: #427595;
+    border-radius: 4.99174px;
+    font-weight: 500;
+    font-size: 11.9802px;
+    line-height: 15px;
+    display: grid;
+    place-content: center;
+    color: #FFFFFF;  
+    margin-bottom: 10px;  
+  }
+
+  .green {
+      width: 100%;
+      display: flex;
+      gap: 2px;
+      flex-wrap: wrap;
+      margin-bottom: 10px;  
+  }
+
+  .green > div {
+    padding: 7px 10px;
+    background: #00A300;
+    border-radius: 4.99174px;
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 15px;
+    color: #FFFFFF;
+    display: grid;
+    place-content: center;
+  }
+
+  .red {
+    width: 100%;
+    display: flex;
+    gap: 2px;
+    flex-wrap: wrap;
+    margin-bottom: 10px;  
+  }
+
+  .red > div {
+    padding: 7px 10px;
+    background: #FF5722;
+    border-radius: 4.99174px;
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 15px;
+    color: #FFFFFF;
+    display: grid;
+    place-content: center;
+  }
+
+  .yellow {
+    width: 100%;
+    display: flex;
+    gap: 2px;
+    flex-wrap: wrap;
+    margin-bottom: 10px;  
+}
+
+.yellow > div {
+  padding: 7px 10px;
+  background: #FEBA06;
+  border-radius: 4.99174px;
+  font-weight: 500;
+  font-size: 11px;
+  line-height: 15px;
+  color: #FFFFFF;
+  display: grid;
+  place-content: center;
+}
+/* header ends */
+
+
+
+.possiblities {
+    padding: 2rem 8rem;
+    margin-bottom: 6rem;
+}
+
+.possiblities > h2 {
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 70px;
+    text-align: center;
+    color: #272D4E;
+}
+.possiblities > p {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 30px;
+    text-align: center;
+    color: #858688;
+}
+.possibility-images {
+    /* width: 2rem; */
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    
+}
+.possibility-images > div {
+    width: 350px;
+}
+.possibility-images > div:nth-child(2) {
+    margin-top: 40px;
+}
+.possibility-images > div:nth-child(3) {
+    margin-top: 80px;
+}
+.possibility-images > div > img {
+    box-shadow: 0px 18px 52.8537px rgba(215, 228, 249, 0.5);
+    border-radius: 20px;
+    /* object-fit: contain; */
+    width: 100%;
+    /* height: 2rem; */
+}
+.possibility-images > div > p {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 30px;
+    color: #94A2B3;
+}
+.possibility-images > div > a {
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 25px;
+    color: #299EF3;
+    text-decoration: none;
+}
+
+.blue-section {
+    background-image: url("/assets/images/blue-bg.png");
+    /* background-image: url("/assets/images/Wordpress-Transparent-bg.svg"); */
+    background-repeat: no-repeat;
+    /* background-position: top 200px; */
+    /* background-size: 35rem; */
+    /* background-color: #3789ff; */
+    height: 100vh;
+    background-size: cover;
+    position: relative;
+    padding: 6rem;
+  /* width: 100%;
+  overflow: hidden;
+   */
+}
+
+/* .blue-section:after {
+    content: "";
+    width: 200%;
+    height: 0;
+    padding-top: 50%;
+    border-radius: 100%;
+    background: #ffffff;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translateX(-50%);
+  } */
+  
+  .blue-section > div {
+      position: absolute;
+      display: flex;
+      gap: 2rem;
+      align-items: center;
+  }
+
+  .blue-section > div > img {
+      width: 300px;
+  }
+  .blue-section > div > div {
+    width: 330px;
+}
+.blue-section > div > div > h3 {
+    font-weight: 700;
+    font-size: 32px;
+    /* line-height: 44px; */
+    color: #FFFFFF;
+}
+
+.blue-section > div > div > p{
+    font-weight: 500;
+font-size: 15px;
+line-height: 30px;
+color: #FFFFFF;
+}
+.blue-section > div > div > button {
+    width: 250px;
+height: 60px;
+background: #FFBA49;
+border-radius: 5px;
+border: 1px solid #FFBA49;
+font-weight: 600;
+font-size: 18px;
+line-height: 22px;
+text-align: center;
+color: #FFFFFF;
+}
+  .blue-section > div:nth-child(1) {
+      left: 240px;
+      top: -20px;
+  }
+  .blue-section > div:nth-child(2) {
+    bottom: -20px;
+    right: 240px;
+}
 
 /* media queries */
 @media (max-width:1120px) {
@@ -151,3 +460,7 @@
         width: 100%;
     }
   }
+
+
+
+
